docs-site/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: docs
  namespace: docs-site
spec:
  parentRefs:
    - name: home-ingress
      namespace: kube-system
      sectionName: https
  hostnames:
    - docs.home.datalab.gg
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: docs
          port: 80
